fix popup tab nav overlap

--- a/frontend/css/global.scss
+++ b/frontend/css/global.scss
@@ -177,6 +177,7 @@ fieldset {
 .controls-content,
 .connectivity-content {
   margin-bottom: 0;
+  padding-top: 2rem !important;
   .tabs {
     display: flex;
     position: absolute;
